# jupyter-security-sprint-prep

./: .gitignore  LICENSE  README.md  pyproject.toml  test_ws.py
appsec_sprint_evaluator/: pyproject.toml
appsec_sprint_evaluator/appsec_sprint_evaluator/: ai_reviewer.py  cli.py  dast_probe.py  evaluator.py  github_reporter.py  static_parser.py  tutorial.py
appsec_sprint_evaluator/output/: jupyter_server_security_sprint_report.md  training_playground_aspm_dashboard.json  training_playground_aspm_dashboard.md  training_playground_security_dashboard.json  training_playground_security_dashboard.md
appsec_sprint_evaluator/training_playground/: README.md  main.tf  requirements.txt  vulnerable_app.py
appsec_sprint_evaluator/training_playground/notebooks/: example.ipynb
container-k8s-security/: HOWTO.md  README.md
container-k8s-security/k8s-manifests/: jupyterhub-deployment-hardened.yaml  jupyterhub-deployment.yaml  network-policy.yaml  single-user-profile.yaml
container-k8s-security/output/: container-k8s-security-dashboard.json  container-k8s-security-dashboard.md
container-k8s-security/sandbox/: deploy-jupyter.sh  kind-config.yaml  setup-sandbox.sh
container-k8s-security/scans/checkov/: jupyterhub_dockerfile.txt  jupyterhub_dockerfile_real.json  k8s_manifests.txt  run-checkov.sh
container-k8s-security/scans/grype/: jupyterhub_image_real.json  jupyterhub_image_summary.txt  jupyterlab_image_summary.txt  postgres93_summary.txt  run-grype.sh
container-k8s-security/scans/kubescape/: mitre_results.txt  nsa_results.txt  nsa_results_real.json  (+1 more)
jupyter_sec_firewall/: __init__.py  analyzer.py  extension.py  handlers.py
notes/: bandit-findings.md  pip-audit-findings.md  repo-versions.md  security-repo-context.md  semgrep-findings.md  tool-comparison.md
output/: architecture-explainer.html  jupyter_server_security_dashboard.json  jupyter_server_security_dashboard.md  jupyter_server_security_sprint_report.md  jupyterhub_security_dashboard.json  jupyterhub_security_dashboard.md  training_playground_security_dashboard.json
output/jupyter-security-results/: JupyterHub-K8s-Security-Report.docx  checkov-z2jh.txt  grype-jupyterhub.json  kubescape-mitre.json  kubescape-nsa.json  real-scan-analysis.md
scans/bandit/: jupyter_server.json  jupyter_server.txt  jupyterhub.json  jupyterhub.txt  run-bandit.sh  security_tools.json
scans/pip-audit/: jupyter_server.json  jupyterhub.json  run-pip-audit.sh
scans/semgrep/: jupyter_server_combined.json  jupyter_server_p-owasp-top-ten.json  jupyter_server_p-owasp-top-ten.txt  jupyter_server_p-python.json  jupyter_server_p-security-audit.json  jupyter_server_p-security-audit.txt  jupyterhub_combined.json  jupyterhub_p-owasp-top-ten.json  jupyterhub_p-owasp-top-ten.txt  jupyterhub_p-python.json  jupyterhub_p-python.txt  jupyterhub_p-security-audit.json  jupyterhub_p-security-audit.txt  run-semgrep.sh
(+1 files in other folders)
